[package]
name = "uniswapx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erc20 = { git = "https://github.com/leruaa/erc20-rs" }
uniswapx-rs = { git = "https://github.com/leruaa/uniswapx-artemis", branch = "encode_refactoring" }
alloy-primitives = "0.6"
alloy-sol-types = { version = "0.6", features = ["json"] }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower = { version = "0.4", features = ["limit", "util"] }
reqwest = "0.11"
dashu-float = "0.4"
thiserror = "1.0"
anyhow = "1.0.72"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
dotenv = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
