[package]
name = "uniswapx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erc20 = { git = "https://github.com/leruaa/erc20-rs" }
uniswapx-rs = { git = "https://github.com/leruaa/uniswapx-artemis", branch = "encode_refactoring" }
alloy-primitives = "0.6"
alloy-sol-types = { version = "0.6", features = ["json"] }
alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "network",
    "providers",
    "transports",
    "transport-http",
    "transport-ws",
    "pubsub",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "json-rpc",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower = { version = "0.4", features = ["limit", "util"] }
reqwest = "0.11"
dashu-float = "0.4"
base64 = "0.22"
thiserror = "1.0"
anyhow = "1.0.72"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
dotenv = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
