[package]
name = "uniswapx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.5", features = [
    "network",
    "providers",
    "transports",
    "transport-http",
    "transport-ws",
    "pubsub",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "json-rpc",
    "json",
    "sol-types",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower = { version = "0.5", features = ["limit", "util"] }
reqwest = "0.12"
dashu-float = "0.4"
base64 = "0.22"
thiserror = "1.0"
anyhow = "1.0.72"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
dotenv = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
